--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,13 @@
         "ext-json": "*",
         "ext-simplexml": "*",
         "ext-zip": "*",
+        "anlutro/l4-settings": "^1.0.0",
+        "bensampo/laravel-enum": "^6.0",
         "directorytree/ldaprecord-laravel": "^3.0",
+        "doctrine/dbal": "^3.0",
+        "firebase/php-jwt": "^6.4",
         "guzzlehttp/guzzle": "^7.0.1",
+        "jumbojett/openid-connect-php": "^0.9.10",
         "laravel/framework": "^11.0",
         "laravel/horizon": "^5.21",
         "laravel/prompts": "^0.1.13",
@@ -27,6 +32,8 @@
         "spatie/laravel-csp": "^2.9",
         "spatie/laravel-ignition": "^2.0",
         "spatie/laravel-settings": "^3.3",
+        "socialiteproviders/keycloak": "^5.2",
+        "socialiteproviders/saml2": "^4.7",
         "symfony/var-exporter": "^7.0"
     },
     "require-dev": {
