Refactor LDAP auth
Signed-off-by: Sebastian Hoß <seb@xn--ho-hia.de>

--- a/.env.example
+++ b/.env.example
@@ -62,8 +62,11 @@ MAIL_FROM_NAME="${APP_NAME}"
 # Raw LDAP filter to restrict the user search
 #LDAP_FILTER=
 
-# Attribute with GUID; OpenLDAP: 'entryuuid', AD: 'objectGUID'
-#LDAP_GUID_KEY=entryuuid
+# Query the users attributes using the users own credentials
+#LDAP_LOAD_ATTRIBUTES_AS_USER=false
+
+# Raw LDAP filter to restrict the user search
+#LDAP_FILTER=
 
 # Comma seperated list of the object class
 #LDAP_OBJECT_CLASSES=top,person,organizationalperson,inetorgperson
