Disable local auth
Signed-off-by: Sebastian Hoß <seb@xn--ho-hia.de>

--- a/.env.example
+++ b/.env.example
@@ -88,6 +88,9 @@ MAIL_FROM_NAME="${APP_NAME}"
 # Default locale
 #DEFAULT_LOCALE=en
 
+# Enable local authentication
+LOCAL_AUTH_ENABLED=true
+
 # Don't forget to rebuild frontend on changing any environment variables starting with VITE_
 
 # Theme (resources/sass/theme/)
